# 2018_fall_computer_vision

./: .gitignore  README.md  cpp_temp.cpp  create_new_hw.sh  report_temp.tex
hw1_image_raw_io/: CMakeLists.txt
hw1_image_raw_io/images/: lena_256_bright.raw  lena_256_rot_face.raw
hw1_image_raw_io/src/: image_raw_io.cpp  image_raw_io_1.cpp  image_raw_io_2.cpp
hw2-1_gray_level_resolution/: CMakeLists.txt
hw2-1_gray_level_resolution/images/: baboon_256.raw
hw2-1_grey_level_resolution/: CMakeLists.txt
hw2-1_grey_level_resolution/include/: grey_level_resolution.hpp
hw2-1_grey_level_resolution/src/: grey_level_resolution.cpp
hw2-2_rooming_shrinking/src/: hw2_2_rooming_shrinking.cpp
hw2_1_gray_level_resolution/include/: hw2_1_gray_level_resolution.hpp
hw2_1_gray_level_resolution/report/: HW#2-1_106368002_report.tex
hw2_1_gray_level_resolution/src/: hw2_1_gray_level_resolution.cpp
hw2_1_grey_level_resolution/: CMakeLists.txt
hw2_1_grey_level_resolution/report/: HW#2-1_106368002_report.tex
hw2_1_grey_level_resolution/src/: hw2_1_grey_level_resolution.cpp
hw2_2_rooming_shrinking/: CMakeLists.txt
hw2_2_rooming_shrinking/include/: hw2_2_rooming_shrinking.hpp
hw2_2_rooming_shrinking/report/: HW#2-2_106368002_report.tex
hw2_2_rooming_shrinking/src/: hw2_2_rooming_shrinking.cpp
hw3_grey_tf_his_eqz/: CMakeLists.txt
hw3_grey_tf_his_eqz/images/: cat_bright.raw  cat_dark.raw  livingroom_bright.raw  livingroom_dark.raw
hw3_grey_tf_his_eqz/include/: grey_level_transformation.hpp  histogram_equalization.hpp
hw3_grey_tf_his_eqz/report/: HW#3_106368002_report.tex
hw3_grey_tf_his_eqz/result_plot_data/: Power-Law.csv  livingRoomBrightEqHis.csv  livingRoomBrightHis.csv  livingRoomDarkEqHis.csv  livingRoomDarkHis.csv  piecewise_curve_bright.csv  piecewise_curve_dark.csv
hw3_grey_tf_his_eqz/src/: grey_level_transformation.cpp  histogram_equalization.cpp
hw4-1_local_moment_smooth_shap/: CMakeLists.txt
hw4-1_local_moment_smooth_shap/images/: LRcorner.raw  car.raw  lena512_noise.raw  sheep.raw
hw4-1_local_moment_smooth_shap/include/: local_moment.hpp  smoothing_mask.hpp
hw4-1_local_moment_smooth_shap/report/: HW#4-1_106368002_report.tex
hw4-1_local_moment_smooth_shap/src/: local_moment.cpp  smoothing_mask.cpp
hw4-2_image_sharpning/: CMakeLists.txt
hw4-2_image_sharpning/images/: lena512.raw
hw4-2_image_sharpning/include/: laplacian_sobel_filtering.hpp
hw4-2_image_sharpning/lib/: filters.cpp  filters.hpp
hw4-2_image_sharpning/report/: HW#4-2_106368002_report.tex
hw4-2_image_sharpning/src/: laplacian_sobel_filtering.cpp  subtraction_operation.cpp
hw5_2d_dft_freq_filter/: CMakeLists.txt
hw5_2d_dft_freq_filter/images/: fingerpoint.raw  lena_256.raw
hw5_2d_dft_freq_filter/include/: cv_dft_2d.hpp  dft_2d.hpp  histogram_equalization.hpp  noise_filter.hpp
hw5_2d_dft_freq_filter/lib/: cv_dft_2d.cpp  dft_2d.cpp  histogram_equalization.cpp
hw5_2d_dft_freq_filter/report/: HW#5_106368002_report.tex
hw5_2d_dft_freq_filter/src/: cv_dft_2d_main.cpp  dft_2d.cpp  dft_2d_filter.cpp  dft_2d_main.cpp  noise_filter.cpp  noise_filter_main.cpp
hw6-1_freq_filter_geo_tran/: CMakeLists.txt
hw6-1_freq_filter_geo_tran/images/: fox.raw  lena256.raw  lena256_blur.raw  lena256_blur_gau.raw  owl_fisheye.raw  wolf_dark.raw
hw6-1_freq_filter_geo_tran/include/: cv_dft_2d.hpp  freq_filters.hpp  image_io.hpp
hw6-1_freq_filter_geo_tran/lib/: cv_dft_2d.cpp  freq_filters.cpp
hw6-1_freq_filter_geo_tran/report/: HW6-1_106368002_report.tex
hw6-1_freq_filter_geo_tran/src/: freq_filters_main.cpp  homomorphic_filter_main.cpp
hw6-2_geometric_tf_chessboard/: CMakeLists.txt
hw6-2_geometric_tf_chessboard/images/: chessboard_256.raw  chessboard_distorted_256.raw  owl.raw
hw6-2_geometric_tf_chessboard/include/: cv_dft_2d.hpp  geo_tf_chessboard.hpp
hw6-2_geometric_tf_chessboard/lib/: cv_dft_2d.cpp  geo_tf_chessboard.cpp
hw6-2_geometric_tf_chessboard/report/: HW6-2_106368002_report.tex
hw6-2_geometric_tf_chessboard/src/: geometric_tf_chessboard.cpp
include/: image_io.hpp
lib/: image_io.cpp
